--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -90,8 +90,12 @@ html {
 }
 
 .carousel {
-    background-color: black;
+    background: linear-gradient(black, $color-background);
 
+    img {
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
+    }
     @media screen and (max-width: 720px){
         padding-top: 30px;
     }
