--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -91,11 +91,11 @@ html {
 
 .carousel {
     background: linear-gradient(black, $color-background);
-
+    
     img {
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
+        border-bottom: 1px solid black;
     }
+
     @media screen and (max-width: 720px){
         padding-top: 30px;
     }
