--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,10 +6,13 @@ html {
     background-color: $color-background-2;
 }
 
+body{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .top-bar {
-    height: 46px;
+    height: 60px;
     width: 100%;
-    background-color: $color-background;
 
     @media screen and (max-width: 1080px){
         height: 20px;
@@ -23,12 +26,12 @@ html {
     margin: 0 auto;
     z-index: 2000;
     border-top: 3px solid $color-background;
-    border-style: dotted;
+    border-top-style: dotted;
 }
 
 .menu {
     display: flex;
-    height: 40px;
+    height: 50px;
     width: 50%;
     background-color: black;
     border-radius: 50px;
@@ -38,7 +41,7 @@ html {
     a {
         color: white;
         text-decoration: none;
-        font-family: Playwrite-PL;
+        font-family: $font-family-normal;
 
         &:hover{
             color: $text-color-hover;
@@ -46,7 +49,7 @@ html {
     }
 
     img {
-        width: 200px;
+        width: 250px;
         filter: drop-shadow(0px 4px 4px black);
     }
     
@@ -90,14 +93,16 @@ html {
 }
 
 .carousel {
-    background: linear-gradient(black, $color-background);
-    
+    box-shadow: 20px 25px 15px white;
+
     img {
         border-bottom: 1px solid black;
+        animation-name: carrusel;
+        animation-duration: 6s;
     }
 
     @media screen and (max-width: 720px){
-        padding-top: 30px;
+        padding-top: 5px;
     }
 }
 
@@ -120,6 +125,7 @@ html {
 .custom-shape-divider-top-1718731153 .shape-fill {
     fill: #F7E4BB;
 }
+
 // END OF WAVE STYLES ==============================
 
 .container-fluid {
@@ -142,11 +148,60 @@ html {
 }
 
 .square-content{
-    width: 320px;
-    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 420px;
+    height: 470px;
     border-radius: 30px;
-    border: 3px dotted black;
     background-color: white;
+    padding: 5px;
+
+    .top-rating{
+        text-align: center;
+        width: 100%;
+        height: 20px;
+        position: sticky;
+        top: 0px;
+        font-size: 28px;
+        border-radius: 30px;
+    }
+
+    h4{
+        font-family: $font-family-normal;
+        font-weight: 1000;
+        color: $text-color-hover;
+        padding: 10px 0;
+        background-color: $color-background;
+        border-bottom-left-radius: 30px;
+        border-bottom-right-radius: 30px;
+        text-align: center;
+        width: 100%;
+    }
+
+    p {
+        padding: 0 10px;
+        font-size: 1.1rem;
+    }
+
+    .img-content {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        border-top-right-radius: 30px;
+        border-top-left-radius: 30px;
+        transition: 1s;
+        border: 3px solid black;
+
+        &:hover{
+            filter: contrast(1.4);
+            transform: scale(1.05);
+            border-bottom-left-radius: 30px;
+            border-bottom-right-radius: 30px;
+            transition: 1s;
+            cursor: pointer;
+        }
+    }
 }
 
 .footer {
