--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,9 +1,11 @@
 $color-background: #f7e4bb;
 $color-background-2: rgb(202, 70, 118);
+$color-background-3: rgba(255, 255, 255, 0.875);
 
 $text-color-hover: rgb(202, 70, 118);
 
 $font-family-normal: Playwrite-PL;
+$font-family-second: 'Arial Narrow Bold', sans-serif;
 
 @font-face {
     font-family: Playwrite-PL;
