--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,17 +2,15 @@
 @use "_base" as *;
 @import "bootstrap/scss/bootstrap";
 
-html {
-    background-color: $color-background-2;
-}
-
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background-color: $color-background-2;
 }
 
 .top-bar {
     height: 60px;
     width: 100%;
+    background-color: $color-background-3;
 
     @media screen and (max-width: 1080px){
         height: 20px;
@@ -39,7 +37,7 @@ body{
     align-items: center;
 
     a {
-        color: white;
+        color: $color-background-3;
         text-decoration: none;
         font-family: $font-family-normal;
 
@@ -107,6 +105,7 @@ body{
 }
 
 // WAVE STYLES =====================================
+
 .custom-shape-divider-top-1718731153 {
     width: 100%;
     overflow: hidden;
@@ -130,78 +129,90 @@ body{
 
 .container-fluid {
     background-color: $color-background-2;
-    margin-top: -2%;
-
-    @media screen and (max-width: 720px){
-        margin-top: -10%;
-    }
+    margin-top: -10px;
 }
 
-.main-content {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
+.product-container {
+    overflow: scroll;
+    scrollbar-color: $color-background-3 $color-background-2;
+    white-space: nowrap;
     padding: 15px;
     width: 100%;
+    height: auto;
+    margin-bottom: 42px;
+    margin-top: 10px;
+    font-family: $font-family-normal;
 }
 
-.square-content{
-    display: flex;
-    flex-direction: column;
+.section-title{
+    width: 100%;
+    text-align: center;
+    font-family: $font-family-normal;
+    color: $color-background-3;
+    background-color: $color-background-2;
+}
+
+.product-item{
+    display: inline-block;
     align-items: center;
-    width: 420px;
-    height: 470px;
-    border-radius: 30px;
-    background-color: white;
-    padding: 5px;
+    width: 320px;
+    border-radius: 20px;
+    margin: 0 10px;
+    padding: 6px;
+    background-color: $color-background-3;
 
-    .top-rating{
-        text-align: center;
-        width: 100%;
-        height: 20px;
-        position: sticky;
-        top: 0px;
-        font-size: 28px;
-        border-radius: 30px;
-    }
 
-    h4{
-        font-family: $font-family-normal;
-        font-weight: 1000;
-        color: $text-color-hover;
-        padding: 10px 0;
-        background-color: $color-background;
-        border-bottom-left-radius: 30px;
-        border-bottom-right-radius: 30px;
-        text-align: center;
-        width: 100%;
-    }
-
-    p {
-        padding: 0 10px;
-        font-size: 1.1rem;
-    }
-
-    .img-content {
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-        border-top-right-radius: 30px;
-        border-top-left-radius: 30px;
-        transition: 1s;
-        border: 3px solid black;
-
-        &:hover{
-            filter: contrast(1.4);
-            transform: scale(1.05);
-            border-bottom-left-radius: 30px;
-            border-bottom-right-radius: 30px;
-            transition: 1s;
-            cursor: pointer;
+    &:hover {
+        .item-price {
+            color: black;
         }
     }
+}
+
+.item-description{
+    font-size: 22px;
+    font-weight: normal;
+    color: black;
+    padding: 10px 0;
+    text-align: center;
+    width: 100%;
+    height: 90px;
+}
+
+.small-text {
+    font-size: 18px;
+}
+
+.top-rating{
+    text-align: center;
+    width: 100%;
+    height: 24px;
+    position: sticky;
+    top: 0px;
+    font-size: 32px;
+}
+
+.item-product-img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 20px;
+    transition: 1s;
+
+    &:hover{
+        filter: contrast(1.3);
+        transform: scale(1.02);
+        transition: 0.7s;
+        cursor: pointer;
+    }
+}
+
+.item-price {
+    width: 100%;
+    text-align: center;
+    font-size: large;
+    transition: 1s;
+    color: transparent;
 }
 
 .footer {
