--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,7 +30,7 @@ body{
 .menu {
     display: flex;
     height: 50px;
-    width: 50%;
+    width: 60%;
     background-color: black;
     border-radius: 50px;
     justify-content: space-evenly;
@@ -47,15 +47,15 @@ body{
     }
 
     img {
-        width: 250px;
+        width: 260px;
+        margin-left: -3%;
         filter: drop-shadow(0px 4px 4px black);
     }
     
     @media screen and (max-width: 1080px){
-        width: 60%;
-
+        width: 70%;
         img {
-            width: 130px;
+            width: 160px;            
         }
     }
 
@@ -127,6 +127,8 @@ body{
 
 // END OF WAVE STYLES ==============================
 
+// PRODUCTS ========================================
+
 .container-fluid {
     background-color: $color-background-2;
     margin-top: -10px;
@@ -139,7 +141,7 @@ body{
     padding: 15px;
     width: 100%;
     height: auto;
-    margin-bottom: 42px;
+    margin-bottom: 64px;
     margin-top: 10px;
     font-family: $font-family-normal;
 }
@@ -214,6 +216,17 @@ body{
     transition: 1s;
     color: transparent;
 }
+
+// END OF PRODUCTS ==================================
+
+// SECOND SECTION ===================================
+
+.second-section{
+    height: 500px;
+    background-color: $color-background-3;
+}
+
+// END OF SECOND SECTION ============================
 
 .footer {
     height: 200px;
