--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -55,7 +55,8 @@ body{
     @media screen and (max-width: 1080px){
         width: 70%;
         img {
-            width: 160px;            
+            width: 160px;   
+            margin-left: -1px;         
         }
     }
 
@@ -64,7 +65,8 @@ body{
         font-size: 0.8rem;
 
         img {
-            margin-left: -15px
+            width: 140px;
+            margin-left: -1px;
         }
     }
 }
