--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,8 +23,11 @@ body{
     justify-content: center;
     margin: 0 auto;
     z-index: 2000;
-    border-top: 3px solid $color-background;
-    border-top-style: dotted;
+    border-top: 3px dotted $color-background;
+
+    @media screen and (max-width: 720px){
+        height: 70px;
+    }
 }
 
 .menu {
@@ -35,6 +38,7 @@ body{
     border-radius: 50px;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 22px;
 
     a {
         color: $color-background-3;
@@ -54,6 +58,7 @@ body{
     
     @media screen and (max-width: 1080px){
         width: 70%;
+        font-size: 16px;
         img {
             width: 160px;   
             margin-left: -1px;         
@@ -101,9 +106,6 @@ body{
         animation-duration: 6s;
     }
 
-    @media screen and (max-width: 720px){
-        padding-top: 5px;
-    }
 }
 
 // WAVE STYLES =====================================
@@ -141,12 +143,26 @@ body{
     scrollbar-color: $color-background-3 $color-background-2;
     white-space: nowrap;
     padding: 15px;
-    width: 100%;
+    max-width: 1280px;
     height: auto;
     margin-bottom: 64px;
     margin-top: 10px;
     font-family: $font-family-normal;
+
+    animation-name: product-shaking;
+    animation-duration: 3s;
+    animation-iteration-count:infinite;
+    &:hover, :active {
+        animation: none;
+    }
+
+    @media screen and (max-width: 720px){
+        animation: none;
+    }
+
 }
+
+// Animation frame para product-container
 
 .section-title{
     width: 100%;
@@ -165,7 +181,7 @@ body{
     padding: 6px;
     background-color: $color-background-3;
 
-    &:hover {
+    &:hover, &:active {
         .item-price {
             color: black;
         }
@@ -228,6 +244,7 @@ body{
 
 .second-section{
     height: 500px;
+    max-width: 1280px;
     background-color: $color-background-3;
 }
 
