--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -218,7 +218,7 @@ body{
     border-radius: 20px;
     transition: 1s;
 
-    &:hover{
+    &:hover, &:active{
         filter: contrast(1.3);
         transform: scale(1.02);
         transition: 0.7s;
