--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,100 +1,13 @@
 // Import all of Bootstrap's CSS
 @use "_base" as *;
 @import "bootstrap/scss/bootstrap";
+@import "_navbar";
+@import "_waves";
+@import "_product";
 
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     background-color: $color-background-2;
-}
-
-.top-bar {
-    height: 60px;
-    width: 100%;
-    background-color: $color-background-3;
-
-    @media screen and (max-width: 1080px){
-        height: 20px;
-    }
-}
-
-.navbar {
-    background-color: black;
-    height: 30px;
-    justify-content: center;
-    margin: 0 auto;
-    z-index: 2000;
-    border-top: 3px dotted $color-background;
-
-    @media screen and (max-width: 720px){
-        height: 70px;
-    }
-}
-
-.menu {
-    display: flex;
-    height: 50px;
-    width: 60%;
-    background-color: black;
-    border-radius: 50px;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 22px;
-
-    a {
-        color: $color-background-3;
-        text-decoration: none;
-        font-family: $font-family-normal;
-
-        &:hover{
-            color: $text-color-hover;
-        }
-    }
-
-    img {
-        width: 260px;
-        margin-left: -3%;
-        filter: drop-shadow(0px 4px 4px black);
-    }
-    
-    @media screen and (max-width: 1080px){
-        width: 70%;
-        font-size: 16px;
-        img {
-            width: 160px;   
-            margin-left: -1px;         
-        }
-    }
-
-    @media screen and (max-width: 720px){
-        width: 100%;
-        font-size: 0.8rem;
-
-        img {
-            width: 140px;
-            margin-left: -1px;
-        }
-    }
-}
-
-.dropdown-item {
-    width: 200px;
-
-    &:hover{
-        background-color: black;
-    }
-}
-
-.myBtn{
-    color: White;
-    font-family: Playwrite-PL;
-
-    &:hover{
-        color: $color-background-2;
-    }
-
-    @media screen and (max-width: 720px){
-        font-size: 0.8rem;
-    }
 }
 
 .carousel {
@@ -108,141 +21,18 @@ body{
 
 }
 
-// WAVE STYLES =====================================
-
-.custom-shape-divider-top-1718731153 {
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    background-color: $color-background-2;
-}
-
-.custom-shape-divider-top-1718731153 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 77px;
-    transform: rotateY(180deg);
-}
-
-.custom-shape-divider-top-1718731153 .shape-fill {
-    fill: #F7E4BB;
-}
-
-// END OF WAVE STYLES ==============================
-
-// PRODUCTS ========================================
-
-.container-fluid {
-    background-color: $color-background-2;
-    margin-top: -10px;
-}
-
-.product-container {
-    overflow: scroll;
-    scrollbar-color: $color-background-3 $color-background-2;
-    white-space: nowrap;
-    padding: 15px;
-    max-width: 1280px;
-    height: auto;
-    margin-bottom: 64px;
-    margin-top: 10px;
-    font-family: $font-family-normal;
-
-    animation-name: product-shaking;
-    animation-duration: 3s;
-    animation-iteration-count:infinite;
-    &:hover, :active {
-        animation: none;
-    }
-
-    @media screen and (max-width: 720px){
-        animation: none;
-    }
-
-}
-
-// Animation frame para product-container
-
 .section-title{
     width: 100%;
     text-align: center;
     font-family: $font-family-normal;
     color: $color-background-3;
     background-color: $color-background-2;
+    margin-bottom: 15px;
 }
 
-.product-item{
-    display: inline-block;
-    align-items: center;
-    width: 320px;
-    border-radius: 20px;
-    margin: 0 10px;
-    padding: 6px;
-    background-color: $color-background-3;
+// NEWS SECTION ===================================
 
-    &:hover, &:active {
-        .item-price {
-            color: black;
-        }
-    }
-}
-
-.item-description{
-    font-size: 22px;
-    font-weight: normal;
-    color: black;
-    padding: 10px 0;
-    text-align: center;
-    width: 100%;
-    height: 90px;
-}
-
-.small-text {
-    font-size: 18px;
-}
-
-.top-rating{
-    text-align: center;
-    width: 100%;
-    height: 24px;
-    position: sticky;
-    top: 0px;
-    font-size: 32px;
-}
-
-.item-product-img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    border-radius: 20px;
-    transition: 1s;
-
-    &:hover, &:active{
-        filter: contrast(1.3);
-        transform: scale(1.02);
-        transition: 0.7s;
-        cursor: pointer;
-    }
-}
-
-.item-price {
-    width: 100%;
-    text-align: center;
-    font-size: large;
-    transition: 1s;
-    color: transparent;
-
-    @media screen and (max-width: 1080px){
-        color: black;
-    }
-}
-
-// END OF PRODUCTS ==================================
-
-// SECOND SECTION ===================================
-
-.second-section{
+.news-section{
     height: 500px;
     max-width: 1280px;
     background-color: $color-background-3;
