--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -8,7 +8,7 @@
     scrollbar-color: $color-background-3 $color-background-2;
     white-space: nowrap;
     padding: 15px;
-    width: 1420px;
+    max-width: 1420px;
     height: auto;
     margin-bottom: 64px;
     margin-top: 10px;
