Seccion de noticias añadida

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,6 +1,7 @@
 $color-background: #f7e4bb;
 $color-background-2: rgb(202, 70, 118);
 $color-background-3: rgba(255, 255, 255, 0.875);
+$color-background-4: rgb(224, 155, 180);
 
 $text-color-hover: rgb(202, 70, 118);
 
