--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -1,6 +1,33 @@
 .news-section{
-    height: 500px;
+    height: auto;
     max-width: 1420px;
-    background-color: $color-background-3;
 }
 
+.accordion-button {
+    background-color: white;
+    font-family: $font-family-normal;
+
+    &:not([aria-expanded="false"]){
+        background-color: $color-background-4;
+        color: white;
+    }
+}
+
+.news-container {
+    background-color: $color-background-3;
+    padding: 24px;
+
+    @media screen and (max-width: 1080px){
+        padding: 14px;
+    }
+
+    @media screen and (max-width: 720px){
+        padding: 4px;
+    }
+}
+
+.news-text {
+    margin-top: 46px;
+    font-family: $font-family-second;
+    font-size: 1.2rem;
+}
