Agregado menu burger

--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -26,8 +26,13 @@
     }
 }
 
+.news-text-title {
+    font-size: 22px;
+    line-height: 38px;
+}
+
 .news-text {
-    margin-top: 46px;
+    margin-top: 28px;
     font-family: $font-family-second;
     font-size: 1.2rem;
 }
