--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -24,12 +24,12 @@
 .menu {
     display: flex;
     height: 50px;
-    width: 60%;
+    width: 70%;
     background-color: black;
     border-radius: 50px;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 22px;
+    font-size: 18px;
 
     a {
         color: $color-background-3;
@@ -43,7 +43,7 @@
 
     img {
         width: 260px;
-        margin-left: -3%;
+        margin-left: -5%;
         filter: drop-shadow(0px 4px 4px black);
     }
     
@@ -52,7 +52,7 @@
         font-size: 16px;
         img {
             width: 160px;   
-            margin-left: -1px;         
+            margin-left: -13px;         
         }
     }
 
@@ -85,5 +85,31 @@
 
     @media screen and (max-width: 720px){
         font-size: 0.8rem;
+    }
+}
+
+.menu-separator{
+    width: 30%;
+    height: 10px;
+    background-color: red;
+}
+
+.menu-hidden {
+    @media screen and (max-width: 1080px){
+        display: none;
+    }
+}
+.dropdown-hidden {
+    display: none;
+
+    @media screen and (max-width: 1080px){
+        display: block;
+    }
+}
+
+.burger{
+    p {
+        display: inline-block;
+        font-size: 28px;
     }
 }
