--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -1,6 +1,7 @@
 .news-section{
     height: auto;
     max-width: 1420px;
+    margin-top: 10px;
 }
 
 .accordion-button {
@@ -10,6 +11,12 @@
     &:not([aria-expanded="false"]){
         background-color: $color-background-4;
         color: white;
+    }
+}
+
+.accordion-button {
+    &:hover{
+        background-color: $color-background-4;
     }
 }
 
