Agregados elementos de navegacion en item products

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -8,6 +8,8 @@ $text-color-hover: rgb(202, 70, 118);
 $font-family-normal: Playwrite-PL;
 $font-family-second: 'Arial Narrow Bold', sans-serif;
 
+$btn-buy-color-1: rgb(70, 118, 202);
+
 @font-face {
     font-family: Playwrite-PL;
     src: url("../fonts/Playwrite_PL/PlaywritePL-VariableFont_wght.ttf");
