--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -30,7 +30,7 @@
 
 .product-item{
     display: inline-block;
-    align-items: center;
+    justify-self: center;
     width: 320px;
     border-radius: 20px;
     margin: 0 10px;
@@ -44,27 +44,60 @@
     }
 }
 
-.item-description{
+.item-name{
     font-size: 22px;
-    font-weight: normal;
     color: black;
     padding: 10px 0;
     text-align: center;
     width: 100%;
-    height: 90px;
+    height: 50px;
+}
+
+.item-price {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    font-size: large;
+    transition: 1s;
+    color: transparent;
+
+    @media screen and (max-width: 1080px){
+        color: black;
+    }
+}
+
+.item-buy-button{
+    width: 100%;
+    text-align: center;
+}
+
+.buy-btn {
+    background-color: $btn-buy-color-1;
 }
 
 .small-text {
     font-size: 18px;
 }
 
-.top-rating{
+.top-info{
     text-align: center;
     width: 100%;
     height: 24px;
     position: sticky;
     top: 0px;
     font-size: 32px;
+    z-index: 2000;
+    fill: pink;
+
+    img {
+        width: 40px;
+        border-radius: 100%;
+        fill: pink;
+    }
+
+    &:hover{
+        cursor: help;
+    }
 }
 
 .item-product-img {
@@ -78,18 +111,5 @@
         filter: contrast(1.3);
         transform: scale(1.02);
         transition: 0.7s;
-        cursor: pointer;
-    }
-}
-
-.item-price {
-    width: 100%;
-    text-align: center;
-    font-size: large;
-    transition: 1s;
-    color: transparent;
-
-    @media screen and (max-width: 1080px){
-        color: black;
     }
 }
