--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,7 @@ body{
 
 .carousel {
     box-shadow: 20px 25px 15px white;
+    overflow: hidden;
 
     img {
         border-bottom: 1px solid black;
