--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "_waves";
 @import "_product";
 @import "_news";
+@import "_form";
 
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
