--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -45,7 +45,7 @@
 }
 
 .item-name{
-    font-size: 22px;
+    font-size: 20px;
     color: black;
     padding: 10px 0;
     text-align: center;
@@ -57,7 +57,8 @@
     width: 100%;
     height: 40px;
     text-align: center;
-    font-size: large;
+    font-size: 14px;
+    margin-top: 24px;
     transition: 1s;
     color: transparent;
 
@@ -84,15 +85,14 @@
     width: 100%;
     height: 24px;
     position: sticky;
-    top: 90%;
-    transform: translateX(40%);
+    text-align: ri;
     font-size: 32px;
     z-index: 2000;
-    fill: pink;
 
     img {
-        width: 40px;
-        border-radius: 100%;
+        width: 32px;
+        border-radius: 50%;
+        background-color: white;
     }
 
     &:hover{
