--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -83,9 +83,8 @@
 .top-info{
     text-align: center;
     width: 100%;
-    height: 24px;
-    position: sticky;
-    text-align: ri;
+    height: 28px;
+    position: relative;
     font-size: 32px;
     z-index: 2000;
 
