Formulario stilos y boton de subir página

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,6 +2,7 @@ $color-background: #f7e4bb;
 $color-background-2: rgb(202, 70, 118);
 $color-background-3: rgba(255, 255, 255, 0.875);
 $color-background-4: rgb(224, 155, 180);
+$color-background-5: rgb(53, 185, 137);
 
 $text-color-hover: rgb(202, 70, 118);
 
@@ -9,6 +10,7 @@ $font-family-normal: Playwrite-PL;
 $font-family-second: 'Arial Narrow Bold', sans-serif;
 
 $btn-buy-color-1: rgb(70, 118, 202);
+// $btn-buy-color-1: rgb(53, 185, 137);;
 
 
 @font-face {
