--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -15,6 +15,61 @@
   margin-top: 16px;
 }
 
+.form-product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  margin-top: 12px;
+
+  label {
+    color: white;
+    font-family: $font-family-normal;
+    font-size: 24px;
+  }
+
+  input {
+    font-size: 18px;
+  }
+
+  input::placeholder {
+    color: $color-background-4;
+  }
+
+  textarea {
+    font-size: 18px;
+  }
+
+  textarea::placeholder {
+    color: $color-background-4;
+  }
+
+  .buy-btn {
+    font-family: $font-family-normal;
+    font-size: 24px;
+    width: 550px;
+    border-radius: 5px;
+    background-color: $color-background-5;
+
+    &:hover {
+      color: $color-background-2;
+      background-color: $color-background-3;
+    }
+
+    &:active {
+      background-color: $color-background-4;
+    }
+  }
+
+  @media screen and (max-width: 720px) {
+    margin-bottom: 48px;
+    .buy-btn {
+      width: 90%;
+    }
+  }
+}
+
 .form-container {
   label {
     color: white;
