--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -1,114 +1,144 @@
 .container-fluid {
-    background-color: $color-background-2;
-    margin-top: -10px;
+  background-color: $color-background-2;
+  margin-top: -10px;
 }
 
 .product-container {
-    overflow: scroll;
-    scrollbar-color: $color-background-3 $color-background-2;
-    white-space: nowrap;
-    padding: 15px;
-    max-width: 1420px;
-    height: auto;
-    margin-bottom: 64px;
-    margin-top: 10px;
-    font-family: $font-family-normal;
+  overflow: scroll;
+  scrollbar-color: $color-background-3 $color-background-2;
+  white-space: nowrap;
+  padding: 15px;
+  max-width: 1420px;
+  height: auto;
+  margin-bottom: 64px;
+  margin-top: 10px;
+  font-family: $font-family-normal;
+  cursor: pointer;
+
+  animation-name: product-shaking;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  &:hover,
+  :active {
+    animation: none;
+  }
+
+  @media screen and (max-width: 720px) {
+    animation: none;
+  }
+}
+
+.product-item {
+  display: inline-block;
+  justify-self: center;
+  width: 320px;
+  height: 100%;
+  border-radius: 20px;
+  margin: 0 10px;
+  padding: 6px;
+  background-color: $color-background-3;
+
+  &:hover,
+  &:active {
+    .item-price {
+      color: black;
+    }
+  }
+}
+
+.product-blur {
+  width: 300px;
+  height: 450px;
+  filter: opacity(26%);
+  transition: 1s all ease-in-out;
+  &:hover {
     cursor: pointer;
-
-    animation-name: product-shaking;
-    animation-duration: 3s;
-    animation-iteration-count:infinite;
-    &:hover, :active {
-        animation: none;
-    }
-
-    @media screen and (max-width: 720px){
-        animation: none;
-    }
-
+    filter: opacity(80%);
+    transition: 1s all ease-in-out;
+  }
 }
 
-.product-item{
-    display: inline-block;
-    justify-self: center;
-    width: 320px;
-    border-radius: 20px;
-    margin: 0 10px;
-    padding: 6px;
-    background-color: $color-background-3;
-
-    &:hover, &:active {
-        .item-price {
-            color: black;
-        }
+.product-form-img {
+  @media screen and (max-width: 1080px) {
+    .product-blur {
+      width: 200px;
+      height: 300px;
     }
+  }
+
+  @media screen and (max-width: 820px) {
+    .product-blur {
+      display: none;
+    }
+  }
 }
 
-.item-name{
-    font-size: 20px;
-    color: black;
-    padding: 10px 0;
-    text-align: center;
-    width: 100%;
-    height: 50px;
+.item-name {
+  font-size: 20px;
+  color: black;
+  padding: 10px 0;
+  text-align: center;
+  width: 100%;
+  height: 50px;
 }
 
 .item-price {
-    width: 100%;
-    height: 40px;
-    text-align: center;
-    font-size: 14px;
-    margin-top: 24px;
-    transition: 1s;
-    color: transparent;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 24px;
+  transition: 1s;
+  color: transparent;
 
-    @media screen and (max-width: 1080px){
-        color: black;
-    }
+  @media screen and (max-width: 1080px) {
+    color: black;
+  }
 }
 
-.item-buy-button{
-    width: 100%;
-    text-align: center;
+.item-buy-button {
+  width: 100%;
+  text-align: center;
 }
 
 .buy-btn {
-    background-color: $btn-buy-color-1;
+  background-color: $btn-buy-color-1;
 }
 
 .small-text {
-    font-size: 18px;
+  font-size: 18px;
 }
 
-.top-info{
-    text-align: center;
-    width: 100%;
-    height: 28px;
-    position: relative;
-    font-size: 32px;
-    z-index: 2000;
+.top-info {
+  text-align: center;
+  width: 100%;
+  height: 28px;
+  position: relative;
+  font-size: 32px;
+  z-index: 2000;
 
-    img {
-        width: 32px;
-        border-radius: 50%;
-        background-color: white;
-    }
+  img {
+    width: 32px;
+    border-radius: 50%;
+    background-color: white;
+  }
 
-    &:hover{
-        cursor: help;
-    }
+  &:hover {
+    cursor: help;
+  }
 }
 
 .item-product-img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    border-radius: 20px;
-    transition: 1s;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 20px;
+  transition: 1s;
 
-    &:hover, &:active{
-        filter: contrast(1.3);
-        transform: scale(1.02);
-        transition: 0.7s;
-    }
+  &:hover,
+  &:active {
+    filter: contrast(1.3);
+    transform: scale(1.02);
+    transition: 0.7s;
+  }
 }
