--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,52 +9,52 @@
 @import "_form";
 @import "_footer";
 
-body{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: $color-background-2;
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: $color-background-2;
 }
 
 .carousel {
-    box-shadow: 20px 25px 15px white;
-    overflow: hidden;
+  box-shadow: 20px 25px 15px white;
+  overflow: hidden;
 
-    img {
-        border-bottom: 1px solid black;
-        animation-name: carrusel;
-        animation-duration: 6s;
-    }
+  img {
+    border-bottom: 1px solid black;
+    animation-name: carrusel;
+    animation-duration: 6s;
+  }
 }
 
-.section-title{
-    width: 100%;
-    text-align: center;
-    font-family: $font-family-normal;
-    color: $color-background-3;
-    background-color: $color-background-2;
-    margin-bottom: 15px;
-    margin-top: 45px;
+.section-title {
+  width: 100%;
+  text-align: center;
+  font-family: $font-family-normal;
+  color: $color-background-3;
+  background-color: $color-background-2;
+  margin-bottom: 15px;
+  margin-top: 45px;
 
-    @media screen and (max-width: 720px){
-        margin-top: 0px;
-    }
+  @media screen and (max-width: 720px) {
+    margin-top: 24px;
+  }
 }
 
 .goUp-btn {
-    display: none;
-    z-index: 1999; 
-    transition: width 0.3s ease;
+  display: none;
+  z-index: 1999;
+  transition: width 0.3s ease;
 
-    img {
-        width: 40px
-    }
+  img {
+    width: 40px;
+  }
 }
 
 .goUp-btn.fixed {
-    display: block;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: $color-background-4;
-    border-radius: 15px;
-    padding: 4px;
+  display: block;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: $color-background-4;
+  border-radius: 15px;
+  padding: 4px;
 }
