Subido el formulario de tartas

--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -59,6 +59,7 @@
 }
 
 .product-form-img {
+  margin-bottom: 20px;
   @media screen and (max-width: 1080px) {
     .product-blur {
       width: 200px;
