--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -111,6 +111,18 @@
   }
 }
 
+.form-whatsapp {
+  width: 100%;
+  text-align: center;
+  font-family: $font-family-normal;
+  color: $color-background-3;
+  font-size: 24px;
+  margin: 24px 0 24px 0;
+  img {
+    width: 160px;
+  }
+}
+
 .submitBtn {
   text-align: center;
 }
