--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,7 +19,7 @@ body {
   overflow: hidden;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
-  max-width: 800px;
+  max-width: 900px;
   margin: 30px auto 0 auto;
 
   img {
@@ -37,8 +37,12 @@ body {
 
 .carousel-item img {
   width: 100%;
-  height: 450px;
+  height: 600px;
   object-fit: cover;
+
+  @media screen and (max-width: 720px) {
+    height: 450px;
+  }
 }
 
 .section-title {
