--- a/src/scss/_information.scss
+++ b/src/scss/_information.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   width: 100%;
   padding: 40px;
-  font-family: $font-family-normal;
+  font-family: $font-family-second;
   font-size: 1.2rem;
   align-items: center;
   text-align: center;
