--- a/src/scss/_information.scss
+++ b/src/scss/_information.scss
@@ -39,3 +39,11 @@
 .nowrap {
   white-space: nowrap;
 }
+
+.whatsapp-form-notes {
+  width: 100%;
+  font-family: $font-family-second;
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+}
