--- a/src/scss/_information.scss
+++ b/src/scss/_information.scss
@@ -9,9 +9,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 40px;
+  padding: 30px;
   font-family: $font-family-second;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   align-items: center;
   text-align: center;
   background-color: $color-background;
@@ -21,19 +21,11 @@
   }
 }
 
-.info-text-container > table {
-  width: 40%;
+.info-table {
+  width: 350px;
   margin: 12px 0 24px 0;
   background-color: white;
   border-radius: 20px;
-
-  @media screen and (max-width: 1080px) {
-    width: 70%;
-  }
-
-  @media screen and (max-width: 720px) {
-    width: 100%;
-  }
 }
 
 .nowrap {
@@ -46,6 +38,17 @@
   color: white;
   text-align: center;
   font-size: 1.2rem;
+}
+
+.privacy-p {
+  background-color: $color-background-3;
+  border-radius: 20px;
+  padding: 15px;
+  color: $text-color-hover;
+
+  a {
+    text-decoration: underline;
+  }
 }
 
 .heartbeat {
