--- a/src/scss/_information.scss
+++ b/src/scss/_information.scss
@@ -15,6 +15,8 @@
   align-items: center;
   text-align: center;
   background-color: $color-background;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 
   @media screen and (max-width: 720px) {
     padding: 20px;
