--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -143,3 +143,24 @@
     transition: 0.7s;
   }
 }
+.scrollable-div {
+  overflow-x: scroll;
+  scrollbar-width: 20px;
+  scrollbar-color: $color-background-4 $color-background-2;
+}
+
+.scrollable-div::-webkit-scrollbar {
+  height: 18px;
+}
+
+.scrollable-div::-webkit-scrollbar-track {
+  background: $color-background-4;
+}
+
+.scrollable-div::-webkit-scrollbar-thumb {
+  background: $color-background-4;
+}
+
+.scrollable-div::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color del deslizador al pasar el mouse */
+}
