--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,8 +17,8 @@ body {
 .carousel {
   box-shadow: 2px 2px 35px white;
   overflow: hidden;
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   max-width: 900px;
   margin: 30px auto 0 auto;
 
@@ -82,4 +82,22 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: $color-background-2;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $color-background-4;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $color-background;
 }
